# VIU-MRBO-TFM-2026

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: README.md
docs/doc-01-proposal/: README.md  main.tex  references.bib  viu-mrob-activity.sty  viu-mrob-tfm.sty
docs/doc-01-proposal/sections/: 00_cover_notes.tex  01_introduccion.tex  02_planteamiento_problema.tex  03_pregunta_hipotesis.tex  04_objetivos.tex  05_alcance_limitaciones.tex  06_metodologia.tex  07_cronograma.tex  08_resultados_esperados.tex  09_referencias.tex
docs/doc-02-mid-report/: README.md  main.tex
docs/doc-03-advance-report/: README.md  main.tex
docs/thesis-final/: README.md  main.tex
experiments/: README.md
experiments/exp-001-baseline-nominal/: README.md  config.yaml
experiments/exp-002-mass-variation/: README.md  config.yaml
experiments/exp-003-center-of-mass-shift/: README.md  config.yaml
experiments/exp-004-communication-degradation/: README.md  config.yaml
experiments/exp-005-disturbance-robustness/: README.md  config.yaml
results/: README.md
scripts/: clean_results.py  generate_figures.py  run_experiment.py
src/viu_mrob_tfm/: __init__.py
src/viu_mrob_tfm/config/: __init__.py  defaults.py  schema.py
src/viu_mrob_tfm/controllers/: __init__.py  adaptive_consensus.py  base.py  nominal_consensus.py
src/viu_mrob_tfm/domain/: __init__.py  agv.py  formation.py  graph.py  load.py  state.py
src/viu_mrob_tfm/estimators/: __init__.py  base.py  (+1 more)
tests/: __init__.py  test_domain_models.py  test_graph.py  test_metrics.py  test_simulator_smoke.py
(+20 files in other folders)
